# promptus-dsl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Genesis.md  Mission.md  Plan.md  README.md  SPEC.md
.claude/skills/: llm-transpiler-rust.md  repo-diagram.md  rust-memory-methodology.md
.github/workflows/: ci.yml  vscode-package.yml
docs/: compatibility-matrix.md  marketplace.md  v2-roadmap.md  v3-roadmap.md  v4-roadmap.md  versioning.md
editors/vscode/: .vscodeignore  LICENSE  README.md  extension.js  language-configuration.json  package.json
examples/: code-reviewer.llm  data-pipeline.llm  extractor.llm  json-output.llm  minimal.llm  quoted.llm  support-agent.llm
examples/baselines/: code-reviewer.md  data-pipeline.md  extractor.md  json-output.md  minimal.md  quoted.md  support-agent.md
examples/includes/: base-system.llm  parent-clean.llm  parent-conflict.llm
examples/invalid/: bad-indentation.llm  duplicate-tools.llm  duplicate-top-level.llm  empty-agent.llm  empty-mapping.llm  empty-sequence.llm  empty-system.llm  missing-agent.llm  missing-colon.llm  undefined-var-ref.llm  unknown-key.llm  unterminated-string.llm  vars-invalid-key.llm  vars-sequence.llm
examples/noncanonical/: messy.llm
src/: ast.rs  composer.rs  diagnostics.rs  formatter.rs  include.rs  lexer.rs  lib.rs  main.rs  merge.rs  parser.rs  provider.rs  validator.rs
src/bench/: mod.rs  tokenizer.rs
src/cli/: bench.rs  fmt.rs  mod.rs  parse.rs  (+2 more)
tests/: bench.rs  conformance.rs  fmt.rs  parse_errors.rs  parse_golden.rs  sample.llm  transpile.rs  validate.rs  vscode.rs
(+7 files in other folders)
