[package]
name = "llm_format"
version = "0.1.0"
edition = "2024"
description = "A Rust-based transpiler for the .llm token-optimized syntax"

[dependencies]
logos = "0.16.1"          # Blazing fast lexical analyzer
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
tiktoken-rs = "0.11.0"    # Token counting for the benchmark feature
anyhow = "1.0"            # Easy error handling

[dev-dependencies]
regex = "1.12"
serde_json = "1.0"
